# hf-model-provenance-scanner

./: .coverage  .gitignore  .pre-commit-hooks.yaml  ATTACKER_AND_USER_RUNBOOK.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  INTEGRATION.md  LICENSE  LIMITATIONS.md  NOVELTY.md  README.md  RESEARCH_ASSESSMENT.md  deploy_protection.py  install.ps1  install.sh  pyproject.toml  report.html  report_malicious.html  test_navigator.py  uninstall.sh
.github/workflows/: ci.yml  release-sign.yml
action/: action.yml
attack_mapping/: enricher.py
dashboard/realtime/: index.html
dashboard/security/: index.html
evidence/: DETECTION_PROOF.md  INCIDENT_REPORT.md
integrations/: Jenkinsfile  azure-pipelines.yml  circleci.yml  github-actions-scan.yml  gitlab-ci.yml  huggingface_webhook.py
scanner/: aibom_generator.py  cli.py  config.py  models.py  monitor.py  monitor_cli.py  provenance.py  risk.py  runtime_policy.py
scanner/analyzer/: ast_visitor.py  config_scanner.py  dependency_scanner.py  gguf_scanner.py  ioc_feed.py  keras_scanner.py  obfuscation_scanner.py  onnx_scanner.py  org_checker.py  pickle_scanner.py  runtime_monitor.py  safetensors_scanner.py  sandbox_executor.py  shell_scanner.py  symbolic_resolver.py  taint_engine.py  temporal_scanner.py  weight_fingerprint.py
scanner/data/: iocs.json  protected_orgs.json
scanner/formatters/: html_formatter.py  json_formatter.py  sarif_formatter.py
scanner/rules/: definitions.py
scanner/utils/: entropy.py  file_filter.py  hf_api.py  levenshtein.py
tests/: generate_binary_fixtures.py  test_attack_mapping.py  test_cli.py  test_dashboard_static.py  test_gguf_scanner.py  test_ioc_feed.py  test_monitor.py  test_obfuscation_scanner.py  test_pickle_gadget_coverage.py  test_pickle_scanner.py  test_safetensors_scanner.py  test_sandbox_executor.py  test_security_rejects.py  test_temporal_scanner.py  test_weight_fingerprint.py
tests/fixtures/: protect_config.json
tests/fixtures/benign/: config.json  model_builder.py
tests/fixtures/binary/: corrupted_with_globals.pkl  malformed.gguf  malformed.safetensors  malicious_eval.pkl  malicious_metadata.gguf  malicious_metadata.safetensors  malicious_os_system.pkl  malicious_stack_global.pkl  malicious_subprocess.pkl  oversized_header.safetensors  safe_model.gguf  safe_model.safetensors  safe_torch_model.pkl
tests/fixtures/malicious/: privacy_filter_loader.py
tests/redteam/: extended_attacks.py  extended_report.json  redteam_report.json  simulate_attacks.py  test_large_scale.py
