[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-scanner"
version = "0.2.0"
description = "Zero-dependency ML supply chain provenance scanner for Hugging Face repositories"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = []  # intentionally empty — zero runtime dependencies

[project.scripts]
hf-scanner = "scanner.cli:main"
hf-scan-monitor = "scanner.monitor_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]  ## optional test runner; unittest remains stdlib-compatible

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]

[tool.setuptools.package-data]
"scanner.data" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
