[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-scanner"
version = "0.2.0"
description = "ML supply chain provenance scanner for Hugging Face repositories"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["psutil>=5.9"]

[project.scripts]
hf-scanner = "scanner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]

[tool.setuptools.package-data]
"scanner.data" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "B"]
ignore = [
    "N802",  # ast visitor methods must be CamelCase
    "E741",  # l/r variable names in tuple unpacking
    "B007",  # loop control variable not used - intentional
    "E501",  # line too long - rule definitions and test fixtures
    "W293",  # blank line contains whitespace - docstrings
    "F841",  # local variable assigned but never used - intentional in some cases
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    'ignore:The configuration option "asyncio_default_fixture_loop_scope" is unset:pytest.PytestDeprecationWarning',
]


